--- a/views/recovery/store.ejs
+++ b/views/recovery/store.ejs
@@ -32,11 +32,11 @@
                 <p>
                     write here your email
                 </p>
-                <form action="/v1/api/usuarios/senha-recuperada" method="POST">
+                <form action="/recovered" method="POST">
                     <input type="hidden" name="token" value="<%= token %>" />
                     <div class="form-group">
                         <input type="password" name="password" class="form-control"
-                            placeholder="Digite sua nova senha" />
+                            placeholder="Set new password" />
                     </div>
                     <button class="btn btn-primary">
                         create new password
