--- a/views/recovery/index.ejs
+++ b/views/recovery/index.ejs
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-3">
-                    <h3>Esqueceu a senha?</h3>
+                    <h3>Esqueceu ou deseja alterar sua senha?</h3>
                     <hr /><br />
 
                     <% if(success){ %>
